# LongRunMCPProxy

./: .gitignore  README.md  pyproject.toml
deploy/: auto_approve_xcode_mcp.applescript  com.b9.xcode-auto-approve.plist  install.sh
docs/: auto-approve-port-plan.md
src/longrun_mcp_proxy/: __init__.py  __main__.py  cli.py  job_store.py  middleware.py  output_filter.py  proxy_persistent.py  proxy_stdio.py  result_classifier.py  xcresult_recovery.py
src/longrun_mcp_proxy/extras/: __init__.py  xcode_approver.py  xcode_defaults.py  xcode_filter.py  xcode_schemes.py
tests/: test_cli.py  test_job_store.py  test_middleware.py  test_output_filter.py  test_proxy_stdio.py  test_result_classifier.py  test_xcode_schemes.py
tools/xcode-auto-approve/: build.sh  main.swift
