[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "longrun-mcp-proxy"
version = "0.1.0"
description = "MCP proxy with async wrapper for long-running tools and persistent SSE mode"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
]

[project.scripts]
longrun-mcp-proxy = "longrun_mcp_proxy.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
