[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "longrun-mcp-proxy"
version = "1.7.3"
description = "MCP proxy with async wrapper for long-running tools and persistent SSE mode"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.1.1,<3.3",
]

[project.scripts]
longrun-mcp-proxy = "longrun_mcp_proxy.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
